side-app/manifest/main_app_depl_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: string-gen
spec:
  replicas: 1
  selector: #matches all labels app: xxx to create connection (i.e. selectors match with labels)
    matchLabels:
      app: string-gen
  # config for a pod
  template:
    metadata:
      labels:
        app: string-gen
    spec: 
      volumes:
      - name: shared-counter
        persistentVolumeClaim:
          claimName: counter-claim
      containers:
      - name: string-gen
        image: xzarem/string-gen:imageTag
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /usr/src/app/files
          name: shared-counter
---
apiVersion: v1
kind: Service
metadata:
  name: main-app-service
spec:
  selector:
    app: string-gen
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 5000
