side-app/manifest/pingpong_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app
spec:
  replicas: 1
  selector: #matches all labels app: xxx to create connection (i.e. selectors match with labels)
    matchLabels:
      app: pong
  # config for a pod
  template:
    metadata:
      labels:
        app: pong
    spec: 
      volumes:
      - name: shared-counter
        persistentVolumeClaim:
          claimName: counter-claim
      containers:
      - name: pong
        image: xzarem/pong@sha256:d5429bfc2c0d17a0c1fd3137be1eb7a9a6603dc4fad6c197e5faa512fcfa6db0
        readinessProbe:
          initialDelaySeconds: 10 
          periodSeconds: 5 
          httpGet:
             path: /
             port: 5000
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5 
          httpGet:
             path: /
             port: 5000
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /usr/src/app/files
          name: shared-counter
---
apiVersion: v1
kind: Service
metadata:
  name: pong-app-service
spec:
  selector:
    app: pong
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 5000
